# sunburst-chip

./: .gitignore  README.md  flake.nix  python-requirements.txt
.github/workflows/: main.yml
hw/data/: common_project_cfg.hjson
hw/ip/core_ibex/: core_ibex.core
hw/ip/core_ibex/rtl/: core_ibex.sv
hw/ip/rom/: rom.core
hw/ip/rom/rtl/: rom.sv
hw/ip/sram/: sram.core
hw/ip/sram/rtl/: sram.sv
hw/top_chip/: top_chip_asic.core  top_chip_system.core  top_chip_system_pkg.core  top_pkg.core
hw/top_chip/data/: rv_plic_cfg.hjson  xbar_main.hjson  xbar_peri.hjson
hw/top_chip/dv/: top_chip_sim.core  top_chip_sim_cfg.hjson
hw/top_chip/dv/env/: mem_clear_util.sv  top_chip_dv_env.core  top_chip_dv_env.sv  top_chip_dv_env_cfg.sv  top_chip_dv_env_pkg.sv  top_chip_dv_if_bundle.sv  top_chip_dv_virtual_sequencer.sv
hw/top_chip/dv/env/seq_lib/: top_chip_dv_base_vseq.sv  top_chip_dv_example_vseq.sv  top_chip_dv_i2c_device_tx_rx_vseq.sv  top_chip_dv_i2c_host_tx_rx_vseq.sv  top_chip_dv_i2c_tx_rx_vseq.sv  top_chip_dv_pattgen_vseq.sv  top_chip_dv_spi_host_tx_rx_vseq.sv  top_chip_dv_uart_base_vseq.sv  top_chip_dv_uart_rand_baudrate_vseq.sv  top_chip_dv_uart_tx_rx_vseq.sv  top_chip_dv_vseq_list.sv
hw/top_chip/dv/tb/: chip_hier_macros.svh  tb.sv
hw/top_chip/dv/tests/: top_chip_dv_base_test.sv  top_chip_dv_test.core  top_chip_dv_test_pkg.sv
hw/top_chip/dv/verilator/: top_chip_verilator.cc  top_chip_verilator.core  top_chip_verilator.h  top_chip_verilator.sv  top_chip_verilator.vlt  top_chip_verilator_main.cc
hw/top_chip/fpga/: top_chip_sonata_xl.core
hw/top_chip/fpga/data/: impl_timing.xdc  pins_sonata_xl.xdc  synth_timing.xdc
hw/top_chip/fpga/rtl/: clk_rst_gen_sonata_xl.sv  top_chip_sonata_xl.sv  top_chip_sonata_xl_pkg.sv
hw/top_chip/ip/clk_rst_gen/: clk_rst_gen.core
hw/top_chip/ip/clk_rst_gen/rtl/: clk_osc.sv  clk_rst_gen.sv  rst_gen.sv
hw/top_chip/ip/intr_ctrl/: intr_ctrl.core
hw/top_chip/ip/intr_ctrl/rtl/: intr_ctrl.sv
hw/top_chip/ip_autogen/rv_plic/: rv_plic.core
hw/top_chip/lint/: top_chip_system.vlt
hw/top_chip/rtl/: jtag_id_pkg.sv  padring.sv  top_chip_asic.sv  top_chip_system.sv  top_chip_system_pkg.sv  top_pkg.sv
hw/top_chip/sw/autogen/: top_chip.c  top_chip.h
scratch_sw/: README.md
scratch_sw/bare_metal/: CMakeLists.txt  link.ld
scratch_sw/bare_metal/checks/: CMakeLists.txt  blink.cc  boot.S  chip_check.cc  pattgen_check.cc  tag_test.S  uart_smoke_check.cc  uart_tx_rx_check.cc  usbdev_check.cc
scratch_sw/bare_metal/common/: CMakeLists.txt  backdoor.hh  boot.S  boot.cc  console.hh  default-handlers.cc  defs.h  platform-gpio.hh  platform-pattgen.hh  platform-pwm.hh  sunburst-devices.hh  sunburst_pattgen.hh  sunburst_plic.hh  sunburst_spi.hh  uart-utils.hh  usbdev-utils.hh
scratch_sw/bare_metal/tests/: CMakeLists.txt  plic_tests.hh  test_runner.cc  test_runner.hh  uart_tests.hh
sw/device/: CMakeLists.txt  cheriot_toolchain.cmake  link.ld
sw/device/lib/: CMakeLists.txt
sw/device/lib/arch/: CMakeLists.txt  device_sim_dv.c  device_sim_verilator.c
sw/device/lib/base/: CMakeLists.txt  abs_mmio.h  crc32.c  memory.c  memory.h  mmio.c  mmio.h  status.h
sw/device/lib/boot/: CMakeLists.txt  boot.S  boot.c  trap.S
sw/device/lib/dif/: CMakeLists.txt  dif_pinmux.c  dif_rv_core_ibex.c  dif_rv_plic.c
sw/device/lib/dif/autogen/: CMakeLists.txt  dif_aon_timer_autogen.c  dif_aon_timer_autogen.h  dif_gpio_autogen.c  dif_gpio_autogen.h  dif_i2c_autogen.c  dif_i2c_autogen.h  dif_pattgen_autogen.c  dif_pattgen_autogen.h  dif_pinmux_autogen.c  dif_pinmux_autogen.h  dif_pwm_autogen.c  dif_pwm_autogen.h  dif_rv_core_ibex_autogen.c  dif_rv_core_ibex_autogen.h  dif_rv_plic_autogen.c  dif_rv_plic_autogen.h  dif_rv_timer_autogen.c  dif_rv_timer_autogen.h  dif_spi_host_autogen.c  dif_spi_host_autogen.h  dif_uart_autogen.c  dif_uart_autogen.h  dif_usbdev_autogen.c  dif_usbdev_autogen.h
sw/device/lib/runtime/: CMakeLists.txt  ibex.h  irq.c  irq.h  log.c  log.h  print.c  print.h
sw/device/lib/testing/: CMakeLists.txt  aon_timer_testutils.c  i2c_testutils.c  pinmux_testutils.c  pinmux_testutils.h  rand_testutils.c  spi_flash_testutils.c  spi_flash_testutils.h  spi_host_testutils.c  spi_host_testutils.h  uart_testutils.c  usb_testutils.c
sw/device/lib/testing/autogen/: CMakeLists.txt  isr_testutils.c  isr_testutils.h
sw/device/lib/testing/json/: CMakeLists.txt  mem.c  pinmux.h  pinmux_config.h
sw/device/lib/testing/test_framework/: CMakeLists.txt  ottf_cheriot_isrs.S  ottf_console.c  ottf_isrs.c  ottf_isrs.h  ottf_macros.h  ottf_main.c  ottf_main.h  ottf_silicon_creator_a.ld  ottf_silicon_creator_b.ld  ottf_silicon_creator_virtual.ld  ottf_silicon_owner_a.ld  ottf_silicon_owner_b.ld  ottf_silicon_owner_virtual.ld
sw/device/lib/ujson/: CMakeLists.txt  private_status.c  ujson.c  ujson.h
sw/device/regs/: aon_timer_regs.h  gpio_regs.h  i2c_regs.h  pattgen_regs.h  pwm_regs.h  rv_core_ibex_regs.h  rv_plic_regs.h  rv_timer_regs.h  spi_host_regs.h  uart_regs.h  usbdev_regs.h
sw/device/tests/: CMakeLists.txt  aon_timer_irq_test.c  aon_timer_smoketest.c  gpio_intr_test.c  gpio_pinmux_test.c  gpio_smoketest.c  i2c_host_override_test.c  i2c_target_smbus_arp_test.c  pattgen_ios_test.c  plic_sw_irq_test.c  pwm_smoketest.c  rv_plic_smoketest.c  rv_timer_smoketest.c  rv_timer_systick_test.c  spi_host_config_test.c  spi_host_flash_test_impl.c  spi_host_irq_test.c  spi_host_smoketest.c  spi_host_winbond_flash_test.c  uart_baud_rate_test.c  uart_loopback_test.c  uart_parity_break_test.c  uart_smoketest.c  uart_tx_rx_test.c  usbdev_config_host_test.c  usbdev_iso_test.c  usbdev_logging_test.c  usbdev_mem_test.c  usbdev_mixed_test.c  usbdev_pincfg_test.c  usbdev_pullup_test.c  usbdev_setuprx_test.c  usbdev_stream_test.c  usbdev_test.c  usbdev_toggle_restore_test.c  usbdev_vbus_test.c
sw/device/tests/sim_dv/: gpio_test.c  i2c_device_tx_rx_test.c  i2c_host_tx_rx_test.c  spi_host_tx_rx_test.c
util/: check_vendor_apply.sh  extract_sw_logs.py  generate_difs.sh  generate_plic.sh  generate_regs.sh  generate_xbar.sh  gpio_and_pc.gtkw  vendor.py  verilator-openocd-cfg.tcl
(+15 files in other folders)
