# Copyright lowRISC contributors (Sunburst project).
# Licensed under the Apache License, Version 2.0, see LICENSE for details.
# SPDX-License-Identifier: Apache-2.0

add_subdirectory(arch)
add_subdirectory(base)
add_subdirectory(boot)
add_subdirectory(dif)
add_subdirectory(runtime)
add_subdirectory(testing)
add_subdirectory(ujson)
